<resources>
    <string name="app_name">Clocker</string>
    <string name="ErrorMsgAdd">No fue posible agregar</string>
    <string name="ErrorMsgUpdate">No fue posible actualizar</string>
    <string name="ErrorMsgRemove">No fue posible eliminar</string>
    <string name="ErrorMsgGetAll">No fue posible cargar la lista</string>
    <string name="ErrorMsgGetById">No fue posible obtener el registro</string>
    <string name="TextID">*Cédula</string>
    <string name="TextName">*Nombre</string>
    <string name="TextFLastName">*Primer apellido</string>
    <string name="TextSLastName">*Segundo apellido</string>
    <string name="TextNationality">*Nacionalidad</string>
    <string name="TextStatus">*Estado</string>
    <string name="btnBackPage">Regresar</string>
    <string name="btnSave">Guardar</string>
    <string name="btnPersonForm">Personal</string>
    <string name="MsgSave">Guardado satisfactoriamente</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnDelete">Eliminar</string>
    <string name="TextYes">Sí</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Estás seguro?</string>
    <string name="MsgDuplicateDate">Ya existe un registro</string>
    <string name="MsgDelete">Registro eliminado</string>
    <string name="MsgUpdate">Registro actualizado</string>
    <string name="MsgDataNoFound">No se encontró la información</string>
    <string name="btnClocker">Reloj Marcador</string>
    <string name="btnRegistersClock">Marcas</string>
    <string name="TextDeleteActionQuestion">¿Desea eliminar este registro?</string>
    <string name="TextAttendances">Asistencias</string>
    <string name="MsgUnknow">Desconocido</string>
    <string name="MsgPending">Pendiente</string>
    <string name="MsgEntry">Entrada</string>
    <string name="MsgDeparture">Salida</string>
</resources>